infrastructure/network/iptables.rules
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Jul  3 20:37:49 2026
*mangle
:PREROUTING ACCEPT [29625:12133045]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [30139:11063935]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
-A OUTPUT -m conntrack --ctstate NEW -m mark ! --mark 0x0/0xff0000 -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
COMMIT
# Completed on Fri Jul  3 20:37:49 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Jul  3 20:37:49 2026
*raw
:PREROUTING ACCEPT [29276:11998646]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 172.30.0.10/32 ! -i br-3148798dc8b4 -j DROP
-A PREROUTING -d 172.30.0.2/32 ! -i br-3148798dc8b4 -j DROP
COMMIT
# Completed on Fri Jul  3 20:37:49 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Jul  3 20:37:49 2026
*filter
:INPUT ACCEPT [28631:11887087]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
:ts-forward - [0:0]
:ts-input - [0:0]
-A INPUT -j ts-input
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -j ts-forward
-A DOCKER -d 172.30.0.2/32 ! -i br-3148798dc8b4 -o br-3148798dc8b4 -p tcp -m tcp --dport 9001 -j ACCEPT
-A DOCKER -d 172.30.0.10/32 ! -i br-3148798dc8b4 -o br-3148798dc8b4 -p tcp -m tcp --dport 9443 -j ACCEPT
-A DOCKER ! -i br-3148798dc8b4 -o br-3148798dc8b4 -j DROP
-A DOCKER ! -i br-881905bc5fb8 -o br-881905bc5fb8 -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o br-3148798dc8b4 -j DOCKER
-A DOCKER-BRIDGE -o br-881905bc5fb8 -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o br-3148798dc8b4 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-881905bc5fb8 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i br-3148798dc8b4 -j ACCEPT
-A DOCKER-FORWARD -i br-881905bc5fb8 -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A ts-forward -i tailscale0 -j MARK --set-xmark 0x40000/0xff0000
-A ts-forward -m mark --mark 0x40000/0xff0000 -j ACCEPT
-A ts-forward -s 100.64.0.0/10 -o tailscale0 -j DROP
-A ts-forward -o tailscale0 -j ACCEPT
-A ts-input -s 100.70.60.222/32 -i lo -j ACCEPT
-A ts-input -i tailscale0 -j ACCEPT
-A ts-input -p udp -m udp --dport 41641 -j ACCEPT
-A ts-input -s 100.115.92.0/23 ! -i tailscale0 -j RETURN
-A ts-input -s 100.64.0.0/10 ! -i tailscale0 -j DROP
COMMIT
# Completed on Fri Jul  3 20:37:49 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Jul  3 20:37:49 2026
*nat
:PREROUTING ACCEPT [1256:320926]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [5327:231005]
:POSTROUTING ACCEPT [5378:234922]
:DOCKER - [0:0]
:ts-postrouting - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.20.0.0/24 ! -o br-881905bc5fb8 -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/24 ! -o br-3148798dc8b4 -j MASQUERADE
-A POSTROUTING -j ts-postrouting
-A DOCKER ! -i br-3148798dc8b4 -p tcp -m tcp --dport 9443 -j DNAT --to-destination 172.30.0.10:9443
-A DOCKER ! -i br-3148798dc8b4 -p tcp -m tcp --dport 9001 -j DNAT --to-destination 172.30.0.2:9001
-A ts-postrouting -m mark --mark 0x40000/0xff0000 -j MASQUERADE
COMMIT
# Completed on Fri Jul  3 20:37:49 2026
